# insertfmt

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: cargo_test.yml  release_cli.yml  release_cli_and_vscode_extension.yml
cli/: main.rs
core/: core.rs
vscode_extension/: .eslintrc.json  .prettierrc.json  CHANGELOG.md  README.md  package.json  webpack.config.js
vscode_extension/src/: extension.ts
vscode_extension/src/test/: memo.md
