[package]
name = "insertfmt"
version = "1.0.1"
edition = "2021"
description = "fast & easy formatter MySQL INSERT queries"
license = "MIT"

[[bin]]
name = "insertfmt"
path = "./cli/main.rs"

[lib]
name = "insertfmt_core"
path = "./core/core.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.7.1"
sqlparser = "0.32.0"
itertools = "0.10.5"
wasm-bindgen = "0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
