[package]
name = "insertfmt"
version = "1.0.3"
edition = "2021"
description = "fast & easy formatter MySQL INSERT queries"
license = "MIT"

[[bin]]
name = "insertfmt"
path = "./cli/main.rs"

[lib]
name = "insertfmt_core"
path = "./core/core.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.8.2"
sqlparser = "0.33.0"
itertools = "0.11.0"
wasm-bindgen = "0.2.84"

[patch.crates-io]
sqlparser = { git = 'https://github.com/canalun/sqlparser-rs', branch = 'feat/add_non_escape_mode' }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
