[package]
name = "insertfmt"
version = "1.0.4"
edition = "2021"
description = "fast & easy formatter MySQL INSERT queries"
license = "MIT"

[[bin]]
name = "insertfmt"
path = "./cli/main.rs"

[lib]
name = "insertfmt_core"
path = "./core/core.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.9.3"
sqlparser = "0.45.0"
itertools = "0.13.0"
wasm-bindgen = "0.2.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
